--- a/KlinikaPlusWeb/appsettings.json
+++ b/KlinikaPlusWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "KlinikaPlusConnectionString": "Server=.;Database=KlinikaPlus;Trusted_Connection=true"
+  }
 }
